# obesity-prediction-app

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: README.md  df_model_final.csv
notebook/: analytics.ipynb
pages/: 01_Home.py  02_Prever.py  04_Dashboard.py  Historico.py  Home.py  Sobre.py
src/: app.py
src/models/: production_pipeline.py  random_forest_final.joblib  train_pipeline.py  xgb_model.joblib
src/pages/: Dashboard.py  Home.py  Prever.py
src/shared/: connection.py  paths.py  plots.py  run_streamlit.py  utils.py  validation.py
